--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,12 @@
   <name>eJewelSouq Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
+    <!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
+<dependency>
+    <groupId>com.h2database</groupId>
+    <artifactId>h2</artifactId>
+    <version>1.4.191</version>
+</dependency>
     
     <dependency>
 	<groupId>javax.servlet</groupId>
