--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,9 +5,20 @@
 	<servlet-name>dispatcher</servlet-name>
 	<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
   </servlet>
+  <servlet>
+  	<description>
+  	</description>
+  	<display-name>reg</display-name>
+  	<servlet-name>reg</servlet-name>
+  	<servlet-class>reg</servlet-class>
+  </servlet>
   <servlet-mapping>
 	<servlet-name>dispatcher</servlet-name>
 	<url-pattern>/</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>reg</servlet-name>
+  	<url-pattern>/reg</url-pattern>
   </servlet-mapping>
   <context-param>
 		<param-name>contextConfigLocation</param-name>
