--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,17 +8,17 @@
   <servlet>
   	<description>
   	</description>
-  	<display-name>reg</display-name>
-  	<servlet-name>reg</servlet-name>
-  	<servlet-class>reg</servlet-class>
+  	<display-name>register</display-name>
+  	<servlet-name>register</servlet-name>
+  	<servlet-class>register</servlet-class>
   </servlet>
   <servlet-mapping>
 	<servlet-name>dispatcher</servlet-name>
 	<url-pattern>/</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
-  	<servlet-name>reg</servlet-name>
-  	<url-pattern>/reg</url-pattern>
+  	<servlet-name>register</servlet-name>
+  	<url-pattern>/register</url-pattern>
   </servlet-mapping>
   <context-param>
 		<param-name>contextConfigLocation</param-name>
