--- a/pom.xml
+++ b/pom.xml
@@ -35,16 +35,42 @@
 			<artifactId>spring-web</artifactId>
 			<version>4.3.2.RELEASE</version>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-webmvc</artifactId>
-			<version>4.3.2.RELEASE</version>
-		</dependency>
-		<dependency>
-    		<groupId>org.springframework</groupId>
-    		<artifactId>spring-orm</artifactId>
-    		<version>4.2.3.RELEASE</version>
-		</dependency>
+<dependency>
+	 <groupId>org.springframework</groupId>
+	 <artifactId>spring-webmvc</artifactId>
+	 <version>4.3.2.RELEASE</version>
+</dependency>
+<dependency>
+       <groupId>org.springframework</groupId>
+       <artifactId>spring-orm</artifactId>
+       <version>4.2.3.RELEASE</version>
+</dependency>
+<dependency>
+      <groupId>jstl</groupId>
+      <artifactId>jstl</artifactId>
+      <version>1.2</version>
+</dependency>
+
+<dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-core</artifactId>
+      <version>4.0.1.Final</version>
+</dependency>
+
+<dependency>
+	<groupId>org.hibernate.javax.persistence</groupId>
+	<artifactId>hibernate-jpa-2.0-api</artifactId>
+	<version>1.0.1.Final</version>
+</dependency>
+
+<!-- https://mvnrepository.com/artifact/commons-dbcp/commons-dbcp -->
+<dependency>
+    <groupId>commons-dbcp</groupId>
+    <artifactId>commons-dbcp</artifactId>
+    <version>1.2.2</version>
+</dependency>
+
+
   </dependencies>
   <build>
     <finalName>eJewelSouq</finalName>
