--- a/pom.xml
+++ b/pom.xml
@@ -69,9 +69,17 @@
     <artifactId>commons-dbcp</artifactId>
     <version>1.2.2</version>
 </dependency>
-
-
-  </dependencies>
+<dependency>
+	<groupId>commons-io</groupId>
+	<artifactId>commons-io</artifactId>
+	<version>2.5</version>
+</dependency>
+<dependency>
+	<groupId>commons-fileupload</groupId>
+	<artifactId>commons-fileupload</artifactId>
+	<version>1.3.2</version>
+</dependency>
+</dependencies>
   <build>
     <finalName>eJewelSouq</finalName>
   </build>
